# computer-vision

./: README.md
Color_Conversion/: CMakeLists.txt  ColorConversion.cpp
Color_Conversion_Demo/: CMakeLists.txt  demo_script.bash  demo_script_2.bash
Color_Conversion_Demo/1st_Program/: 1st_program.cpp  CMakeLists.txt  color_conversions.cpp
Color_Conversion_Demo/2nd_Program/: 2nd_program.cpp  CMakeLists.txt  color_conversions.hpp
Color_Conversion_Demo/3rd_Program/: 3rd_program.cpp  CMakeLists.txt  color_conversions.cpp
Color_Conversion_Demo/4th_Program/: 4th_program.cpp  CMakeLists.txt
Color_Conversion_Demo/data/: test3.ppm  test4.ppm
Detection_Demo/: CMakeLists.txt  runScript_DetectFingers.bash  runScript_DetectWink.bash
Detection_Demo/CreateSamples/: inputs.txt  script_createsamples.bash  script_vec.bash
Detection_Demo/CreateSamples/fingers/: crop.txt  crop1.txt  crop2.txt  crop3.txt  cropped.vec  neg.txt  params.xml  script_cat.bash  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
Detection_Demo/CreateSamples/wink/: cascade.xml  crop.txt  crop1.txt  crop22.txt  crop8.txt  cropped.vec  neg.txt  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
Detection_Demo/DetectFingers/: CMakeLists.txt  DetectFingers.cpp  cascade.xml
Detection_Demo/DetectWink/: CMakeLists.txt  DetectWink.cpp
Image_Read/: CMakeLists.txt  Image_Read.cpp
Image_Threshold/: CMakeLists.txt  Threshold.cpp
Image_Write/: CMakeLists.txt  Image_Write.cpp
Video_DetectWink/: DetectWink_Video.cpp  compile_script.bash
Video_Edges/: compile_script.bash  video_edges.cpp
Video_Read/: compile_script.bash  video_read.cpp
